fixed unavailable chart height on mobile

--- a/assets/scss/components/department-budgets/PerformanceIndicators/styles.scss
+++ b/assets/scss/components/department-budgets/PerformanceIndicators/styles.scss
@@ -180,6 +180,9 @@
           min-height: 100px;
           align-items: center;
           display: flex;
+          @media screen and (max-width: 400px) {
+            min-height: 50px;
+          }
 
           svg {
             margin: 0 auto;
